// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group should render as active when [active=true] 1`] = `
<Group__StyledGroup
  active={true}
  key="foo"
  onClick={[MockFunction]}
>
  foo
</Group__StyledGroup>
`;

exports[`Group should render correct with default props 1`] = `
<Group__StyledGroup
  active={false}
  key="foo"
  onClick={[MockFunction]}
>
  foo
</Group__StyledGroup>
`;
